fix menu bar color on dark mode

--- a/assets/sass/_components.scss
+++ b/assets/sass/_components.scss
@@ -166,7 +166,7 @@
 	padding: 0;
 	font: inherit;
 	color: var(--light-color);
-	background: var(--dark-color-2);
+	background: var(--dark-color-3);
 	border: 0;
 	outline: 0;
 
